azure/arm/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_openshift_uri": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_openshift_uri_1": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_openshift_adminPassword": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_openshift_name": {
            "defaultValue": "openshift",
            "type": "String"
        },
        "networkInterfaces_openshift806_name": {
            "defaultValue": "openshift806",
            "type": "String"
        },
        "networkSecurityGroups_openshift_nsg_name": {
            "defaultValue": "openshift-nsg",
            "type": "String"
        },
        "publicIPAddresses_openshift_ip_name": {
            "defaultValue": "openshift-ip",
            "type": "String"
        },
        "virtualNetworks_openshift_vnet_name": {
            "defaultValue": "openshift-vnet",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/0ba838b1-5399-4a07-8496-eae30feb5ce5/resourceGroups/openshift/providers/Microsoft.Compute/virtualMachines/openshift'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_openshift_name')]",
            "apiVersion": "2015-06-15",
            "location": "australiaeast",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS3_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "[parameters('virtualMachines_openshift_name')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "vhd": {
                            "uri": "[parameters('virtualMachines_openshift_uri')]"
                        }
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "data01",
                            "createOption": "Attach",
                            "caching": "ReadOnly",
                            "diskSizeGB": 1023,
                            "vhd": {
                                "uri": "[parameters('virtualMachines_openshift_uri_1')]"
                            }
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_openshift_name')]",
                    "adminUsername": "dynatrace",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": [],
                    "adminPassword": "[parameters('virtualMachines_openshift_adminPassword')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_openshift806_name'))]"
                        }
                    ]
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_openshift806_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0ba838b1-5399-4a07-8496-eae30feb5ce5/resourceGroups/openshift/providers/Microsoft.Network/networkInterfaces/openshift806'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_openshift806_name')]",
            "apiVersion": "2016-03-30",
            "location": "australiaeast",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "10.1.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_openshift_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_openshift_vnet_name')), '/subnets/default')]"
                            }
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_openshift_nsg_name'))]"
                }
            },
            "resources": [],
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_openshift_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_openshift_vnet_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_openshift_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0ba838b1-5399-4a07-8496-eae30feb5ce5/resourceGroups/openshift/providers/Microsoft.Network/networkSecurityGroups/openshift-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_openshift_nsg_name')]",
            "apiVersion": "2016-03-30",
            "location": "australiaeast",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "OpenShiftPortal",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "EasyTravelFrontend",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1020,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "EasyTravelAdmin",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1030,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0ba838b1-5399-4a07-8496-eae30feb5ce5/resourceGroups/openshift/providers/Microsoft.Network/publicIPAddresses/openshift-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_openshift_ip_name')]",
            "apiVersion": "2016-03-30",
            "location": "australiaeast",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "openshiftdemo"
                }
            },
            "resources": [],
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/0ba838b1-5399-4a07-8496-eae30feb5ce5/resourceGroups/openshift/providers/Microsoft.Network/virtualNetworks/openshift-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_openshift_vnet_name')]",
            "apiVersion": "2016-03-30",
            "location": "australiaeast",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.1.1.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "10.1.1.0/24"
                        }
                    }
                ]
            },
            "resources": [],
            "dependsOn": []
        }
    ]
}
